--- a/Ubli-Front/src/index.css
+++ b/Ubli-Front/src/index.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 @import "leaflet/dist/leaflet.css";
+@import "react-medium-image-zoom/dist/styles.css";
 
 @custom-variant dark (&:is(.dark *));
 
